infra/k8s/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
      - name: post
        image: narayanacharaya/postimage
  selector:
    matchLabels:
      app: post
---

apiVersion: v1
kind: Service
metadata: 
  name: post-svc
spec:
  selector:
    app: post
  ports:
  - name: post
    protocol: TCP
    port: 4000
    targetPort: 4000
