infra/k8s/post-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  type: NodePort
  
  selector:
    app: post
  ports:
  - name: posts
    protocol: TCP
    port: 4000
    targetPort: 4000
