infra/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - host: posts.com
    http:
      paths:
        - path: /posts
          pathType: Prefix  
          backend:
            service:
              name: post-svc
              port:
                number: 4000
